--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: <meta name="google-site-verification" content="e6x63QVF2rJbO8Z1xeYBHSEIFBv4-PE87WuIOtea16E" />
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
